css bundler / support hot reload for server code